# hello_cargo

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
config/: default.production.toml  default.toml
migrations/2024-09-08-054717_initial_users_repo/: up.sql
src/: api.rs  config.rs  lib.rs  logging.rs  main.rs  models.rs  repositories.rs  schema.rs  services.rs
src/repositories/: in_memory_repository.rs  postgres_repository.rs
tests/: integration_test.rs
